fix overflow issue

--- a/src/css/z-style.css
+++ b/src/css/z-style.css
@@ -87,6 +87,7 @@ pre code {
   font-size: 85%;
   background-color: rgba(27, 31, 35, 0.05);
   border-radius: 3px;
+  word-break: break-all;
 }
 
 .markdown-body img {
